<resources>
    <string name="app_name">Coup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">적절하지 않은 사용자 이름입니다.</string>
    <string name="invalid_password">비밀번호는 5자리 이상이어야 합니다!</string>
    <string name="login_failed">"로그인 실패"</string>
    <string name="congratulation_message">Congratulation!</string>
    <string name="thankyou_message">Thank you for signing up. Play with us!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_log_in">Log In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="prompt_check_password">Check Password</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="back_to_log_in_page">Back to Log-in Page</string>
    <string name="room_list">Rooms</string>
    <string name="ranking">Ranking</string>
    <string name="user_info">My Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_recovery_email_sent">Password Recovery Email Sent</string>
    <string name="please_check_your_email">Please check your email.</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="room_title">Room Title</string>
    <string name="game_start">Game Start</string>
    <string name="option">option</string>
    <string name="rooms">Rooms</string>
    <string name="create_room">Create Room</string>
    <string name="room_option">Room Option</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="person">Person</string>
    <string name="create_your_room">Create Your Room</string>
    <string name="change_password">Change Password</string>
    <string name="current">Current</string>
    <string name="change_to">Change to</string>
    <string name="password_check">Password Check</string>
    <string name="server_client_id">300921857777-qpf43mp6tpjs93d3jo96juckpe00cnbf.apps.googleusercontent.com</string>
    <string name="name_text">Waiting For</string>
    <string name="score_text">New Player...</string>
    <string name="foreign_aid">Foreign Aid</string>
    <string name="income">Income</string>
    <string name="coup">Coup</string>
    <string name="tax">Tax</string>
    <string name="assassinate">Assassinate</string>
    <string name="steal">Steal</string>
    <string name="exchange">Exchange</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="challenge">challenge</string>
    <string name="admit">admit</string>
    <string name="block_by_captain">block by captain</string>
    <string name="block_by_ambassador">block by ambassador</string>
    <string name="block_by_duke">block by duke</string>
    <string name="block_by_contessa">block by contessa</string>
    <string name="foreign_aid_admit">foreign aid admit</string>
    <string name="components">구성품</string>
    <string name="components_explanation">인물카드 15장 (각 직업별 3장), 코인 70개</string>
    <string name="preparation">게임 준비</string>
    <string name="preparation_explanation">1. 인물카드를 인당 2장씩 받습니다.\n2. 받은 카드 본인만 볼 수 있습니다.\n3. 각자 2코인씩 부여받습니다.</string>
    <string name="object_of_the_game_explanation">\u2022 다른 플레이어들의 카드를 모두 제거하고 최후의 생존자가 되어야 합니다.</string>
    <string name="game_object">게임 목표</string>
    <string name="game_object_explanation">다른 플레이어들의 카드를 모두 제거하고 최후의 생존자가 되어야 합니다.</string>
    <string name="card_abilities">카드 정보</string>
    <string name="card_abilities_explanation"><![CDATA[• 총 5종류의 인물카드는 각각의 능력을 가집니다.\n
        • 카드 더미에는 각각의 인물카드가 3장씩만 들어있습니다.(총 15장)\n
        • 카드 능력에는 행동(action)과 방해(block)가 있습니다.\n
        • 플레이어의 카드가 제거되면 즉시 해당 카드를 모두에게 공개해야 합니다.\n
        • 모든 카드를 잃으면 게임에서 탈락하게 됩니다.\n
        • 각각의 카드 능력은 아래 게임 진행에 있습니다.]]></string>
    <string name="game_play">게임 진행</string>
    <string name="game_play_explanation1">본인의 차례가 되면 다음 중 한 가지 행동을 할 수 있습니다.</string>
    <string name="game_play_explanation2">a. 수입(Income) : 1코인을 얻습니다. 이 행동은 방해할 수 없습니다.\n
        b. 해외원조(Foreign Aid) : 2코인을 얻습니다. 이 행동은 공작카드의 능력에 의해 방해받을 수 있습니다.\n
        c. 쿠(Coup) : 다른 플레이어의 카드 하나를 제거합니다. 7코인을 소모하게 되며, 이 행동은 방해할 수 없습니다.\n
        d. 능력 : 인물카드의 행동 능력을 사용합니다. <font color ='#FFFF0000'><b>자신이 해당 인물카드를 가지고 있지 않아도 사용할 수 있습니다.</b></font></string>
    <string name="game_play_explanation3"><![CDATA[• 공작 (duke) :\n
        1) 세금징수(TAX) - 3코인을 얻습니다.\n
        2) 해외원조 방어(Foreign-aid Block): 다른 플레이어의 해외원조를 막습니다.\n
        • 암살자 (assassin):\n
        1) 암살(Assassinate) - 3코인을 사용하여 인물카드를 암살합니다.\n
        • 외교관 (ambassador):\n
        1) 교환(Exchange) - 인물카드 더미에서 무작위로 카드 2장을 가져와 본인의 카드와 교환할 수 있습니다. 원하는 카드만 남기고 2장의 카드는 다시 반납합니다.\n
        2) 강탈 방어(Block Steal): 강탈을 방어할 수 있습니다.\n
        • 사령관 (captain):\n
        1) 강탈(Steal) - 다른 플레이어로부터 2코인을 가져옵니다. 외교관이나 사령관카드를 가진 경우 강탈을 방어할 수 있습니다.\n
        2) 강탈 방어(Block Steal): 강탈을 방어할 수 있습니다.\n
        • 귀부인 (contessa):\n
        1) 암살 방어(Assassination Block): 암살을 막을 수 있습니다.]]></string>
    <string name="challenge_rule_book">도전</string>
    <string name="challenge_explanation1">플레이어는 자신에게 없는 카드를 가졌다고 거짓을 말하고, 해당 카드의 능력을 사용할 수 있습니다.
        다른 플레이어들은 이러한 행동이 거짓인 것 같다는 의심이 들면 도전할 수 있습니다.</string>
    <string name="challenge_explanation2"><![CDATA[• 도전을 받은 플레이어는 자신이 들고 있는 카드 중 하나를 모두에게 공개해 진실인지 거짓인지 알려야합니다.]]></string>
    <string name="challenge_explanation3">a. 도전을 받은 플레이어가 실제로 거짓을 말했다면 공개한 카드를 제거합니다.\n
        b. 거짓을 말하지 않았다면, 공개한 카드는 카드더미의 인물카드와 <font color ='#FFFF0000'><b>무작위로 교환</b></font>됩니다. 이 경우 도전한 플레이어가 인물카드 둘 중 하나를 제거해야 합니다.</string>
    <string name="summary_table">요약</string>
</resources>