<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_roundbackground"
    android:id="@+id/dialog_register">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:text="@string/back_to_log_in_page"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/mulish_bold"
        android:textColor="@color/black"
        android:text="@string/congratulation_message"
        android:gravity="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/popup_dice_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:text="@string/thankyou_message" />

</LinearLayout>