<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/room_info_box_super_big"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/kick_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/room_info_box_big"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kick_out">

        <TextView
            android:id="@+id/text_current_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/current"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_current_change_password"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_current_change_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/room_info_box"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_current_change_password" />

        <TextView
            android:id="@+id/text_password_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/change_to"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_current_change_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_current_change_password" />

        <EditText
            android:id="@+id/edit_password_change_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/room_info_box"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/text_password_change_password"
            app:layout_constraintTop_toBottomOf="@+id/text_password_change_password" />

        <TextView
            android:id="@+id/text_check_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/password_check"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_password_change_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_change_password" />

        <EditText
            android:id="@+id/edit_check_change_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/room_info_box"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/text_check_change_password"
            app:layout_constraintTop_toBottomOf="@+id/text_check_change_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_okay_change_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/icon_circle_o"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_cancel_change_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/icon_circle_x"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>