<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/room_info_box_super_big"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/room_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/room_option"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/room_info_box_big"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_option">

        <TextView
            android:id="@+id/text_title_change_room_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title_room_option"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_title_room_option"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/room_info_box"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_change_room_info" />

        <TextView
            android:id="@+id/text_password_room_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title_room_option"
            app:layout_constraintTop_toBottomOf="@+id/edit_title_room_option" />

        <EditText
            android:id="@+id/edit_password_room_option"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/room_info_box"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/text_password_room_option"
            app:layout_constraintTop_toBottomOf="@+id/text_password_room_option" />

        <TextView
            android:id="@+id/person_room_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/person"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/edit_password_room_option"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_room_option" />

        <Button
            android:id="@+id/button_minus_person_option"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/icon_minus_person"
            app:layout_constraintEnd_toStartOf="@+id/text_now_person_option"
            app:layout_constraintTop_toBottomOf="@+id/person_room_option" />

        <TextView
            android:id="@+id/text_now_person_option"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_now_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_minus_person_option" />

        <Button
            android:id="@+id/button_plus_person_option"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/icon_plus_person"
            app:layout_constraintStart_toEndOf="@+id/text_now_person_option"
            app:layout_constraintTop_toTopOf="@+id/text_now_person_option" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_okay_option"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/icon_circle_o"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_cancel_option"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/icon_circle_x"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>